fix: Text overflow in current user

--- a/src/components/widgets/CurrentUser/currentUser.module.scss
+++ b/src/components/widgets/CurrentUser/currentUser.module.scss
@@ -1,14 +1,16 @@
 .wrapper {
   display: flex;
-  align-items: center;
   gap: 12px;
 }
 
 .info {
+  width: calc(100% - 62px);
 }
 
 .avatar {
   display: flex;
+  overflow: hidden;
+  border-radius: 50%;
 
   img {
     max-width: 100%;
@@ -20,6 +22,9 @@
     size: 20px;
     weight: 600;
   }
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .email {
@@ -27,4 +32,7 @@
     weight: 400;
     size: 16px;
   }
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
